--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,12 @@
 
 }
 .Authentication input{
+  transition: 1s;
   border: 2px solid lightblue;
   border-radius: 5px;
   margin: 3px auto 10px auto;
   padding-left: 8px;
-  width: 280px;
+  width: 320px;
   height: 25px;
   font-size: 18px;
   font-weight: bold;
@@ -37,10 +38,73 @@
 }
 
 .Authentication button{
-  width: 280px;
+  transition: 1s;
+  width: 320px;
   height: 30px;
   font-size: 16px;
   font-weight: bold;
   margin: 5px auto;
   background-color: rgb(227, 233, 238);
+}
+
+
+@media screen and (max-width: 1025px){
+  
+  .Authentication input{
+    transition: 1s;
+    width: 40%;
+  }
+  .Authentication button{
+    transition: 1s;
+    width: 40%;  
+  }
+}
+
+
+@media screen and (max-width: 900px){
+                
+  .Authentication input{
+    transition: 1s;
+    width: 50%;
+  }
+  .Authentication button{
+    transition: 1s;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 780px){
+                
+  .Authentication input{
+    transition: 1s;
+    width: 60%;
+  }
+  .Authentication button{
+    transition: 1s;
+    width: 60%; 
+  }
+}
+
+@media screen and (max-width: 600px){
+                
+  .Authentication input{
+    transition: 1s;
+    width: 70%;
+  }
+  .Authentication button{
+    transition: 1s;
+    width: 70%;  
+  }
+}
+
+@media screen and (max-width: 480px){
+                
+  .Authentication input{
+    transition: 1s;
+    width: 80%;
+  }
+  .Authentication button{
+    transition: 1s;
+    width: 80%;  
+  }
 }
