--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@
 .HomeBar img{
   width: 60px;
   height: 60px;
-  padding-left: 15px;
+  margin-left: 15px;
   border-radius: 60px;
 }
 .Heading{
