--- a/src/App.css
+++ b/src/App.css
@@ -221,16 +221,62 @@
   margin-bottom: 10px ;
 }
 .Cards{
-  border: 1px solid black;
+  width: 320px;
+  height: auto;
+  /* border: 1px solid black; */
   margin: 5px;
-  border: 2px solid darkgrey;
   border-radius: 5px;
 }
-
+.Cards span b{
+  color: rgb(82, 81, 81);
+}
+.CardBorder{
+  border: 2px solid darkgrey;
+}
 .EventDetail{
   /* overflow: visible; */
   /* text-justify: inter-word; */
   /* text-overflow: inherit; */
   text-align: justify;
-  border: 1px solid black
+  border: 1px solid rgb(250, 96, 96)
+}
+
+.EventName{
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  padding: 10px 0px;
+  margin-bottom: 5px;
+  border-bottom: 3px solid #1e8fa4;
+  border-radius: 15px;
+}
+.OtherDetails{
+  width: 100%;
+  margin-bottom: 15px
+}
+.EventDetailDiv{
+  width: 25%;
+  float: left;
+  display: flex;
+  /* padding-top: 35px; */
+  flex-direction: column;
+  align-items: center;
+}
+.EventDetailDiv h4{
+  margin: 5px auto;
+  padding: 0px 8px;
+  color: rgb(19, 71, 71)
+
+}
+.EventDetailDiv p{
+  margin: 0px auto 5px auto;
+  padding: 0px 8px  ;
+  color: rgb(77, 76, 76)
+}
+.EventDetailDiv2{
+  width: 50%;
+  float: left;
+  text-align: center;
+
 }
